[package]
name = "awr2544-pac"
version = "0.1.0"
authors = ["Abram Haich"]
edition = "2018"
homepage = "https://github.com/abeanater/awr2544-pac"
description = "A Peripheral Access Crate for the ti awr2544 radar devkit"
license = "MIT"
repository = "https://github.com/abeanater/awr2544-pac"

[dependencies]
cortex-r = "0.2.0"
vcell = "0.1.3"

[dependencies.critical-section]
optional = true
version = "1.0.0"